# game-of-life-wasm

./: Cargo.toml  README.MD  index.html  index.js
src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json
